# funny2

./: Cargo.toml  README.md
src/: lib.rs  main.rs
