[package]
name = "funny2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = {version = "4.1.8", features = ["cargo"] }
dir = "0.1.2"
reqwest = "0.11.14"
serde = {version = "1.0.155" , features = ["derive"]}
serde_json = "1"
tokio = { version = "1.26.0", features = ["full"] }
